Fixed node alignment issue when on expand collapsed icon visible

--- a/public/css/react-bootstrap-treeview.css
+++ b/public/css/react-bootstrap-treeview.css
@@ -3,14 +3,14 @@
 	cursor: pointer;
 }
 
+.treeview span {
+	width: 1rem;
+	height: 1rem;
+}
+
 .treeview span.indent {
 	margin-left: 10px;
 	margin-right: 10px;
-}
-
-.treeview span.expand-collapse {
-	width: 1rem;
-	height: 1rem;
 }
 
 .treeview span.icon {
